--- a/package.json
+++ b/package.json
@@ -6,24 +6,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "^2.4.10",
+    "blob-util": "^2.0.2",
     "expo": "^48.0.7",
+    "expo-camera": "^13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-local-authentication": "~13.3.0",
+    "expo-media-library": "^15.2.3",
     "expo-router": "^1.2.0",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
+    "react-native-config": "^1.5.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "react-native-dotenv": "^3.4.9"
   },
   "resolutions": {
     "metro": "^0.73.7",
